# I2C_control_base

./: .gitignore  CMakeLists.txt  README.md  i2c_stream_thread.cpp  main.cpp  read_encoder.cpp
Arduino/: motor_i2c_slave.ino
Arduino/motor_i2c_slave/: motor_i2c_encoder_slave.ino  motor_i2c_slave.ino
RaspberryPi/: stream_thread.cpp
arduino/imu/: IMU.ino  IMU_AK09918.cpp  IMU_QMI8658.cpp
arduino/motor_i2c_slave/: motor_i2c_slave.ino
src/: read_encoder.cpp
